@@ -25,8 +25,7 @@ public class FakeItem extends Command {
     @Override
     public String[] getSuggestions(String fullCommand, String[] args) {
         if (args.length == 1) {
-            return Objects.requireNonNull(CoffeeClientMain.client.world).getPlayers().stream().map(abstractClientPlayerEntity -> abstractClientPlayerEntity.getGameProfile().getName())
-                    .collect(Collectors.toList()).toArray(String[]::new);
+            return Objects.requireNonNull(CoffeeClientMain.client.world).getPlayers().stream().map(abstractClientPlayerEntity -> abstractClientPlayerEntity.getGameProfile().getName()).toList().toArray(String[]::new);
         } else if (args.length == 2) {
             return new String[]{"hand", "custom:(item id) [item nbt]"};
         } else if (args.length == 3 && args[1].toLowerCase().startsWith("custom:")) {
@@ -92,11 +91,6 @@ public class FakeItem extends Command {
                     stack.setNbt(StringNbtReader.parse(String.join(" ", Arrays.copyOfRange(args, 2, args.length))));
                 } catch (CommandSyntaxException e) {
                     error("Invalid NBT: " + e.getContext());
-                    //                    StringWriter sw = new StringWriter();
-                    //                    e.printStackTrace(new PrintWriter(sw));
-                    //                    for (String s : sw.toString().split("\n")) {
-                    //                        CoffeeConsoleScreen.instance().log(s, CoffeeConsoleScreen.BACKGROUND);
-                    //                    }
                     return;
                 }
             }
